--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -1,24 +1,22 @@
-#	$Id: Makefile,v 1.1 1998/02/02 08:17:50 taubert Exp $
+#	$Id: Makefile,v 1.2 1998/02/09 08:43:52 taubert Exp $
 
 .INCLUDE: /src/gno/paths.mk
 
-all: modem printer null
+all: $(OBJ_DIR)modem $(OBJ_DIR)printer $(OBJ_DIR)null
 
-modem: port.o msccf.o
-	$(LD) $(LDFLAGS) -l libsim -o $@ $<
+$(OBJ_DIR)modem: port.o msccf.o
+	$(LD) $(LDFLAGS) -l /usr/lib/libsim -o $@ $<
 	chtyp -t 187 -a 32257 $@
-modem: libsim
 
-printer: port.o psccf.o
-	$(LD) $(LDFLAGS) -l libsim -o $@ $<
+$(OBJ_DIR)printer: port.o psccf.o
+	$(LD) $(LDFLAGS) -l /usr/lib/libsim -o $@ $<
 	chtyp -t 187 -a 32257 $@
-printer: libsim
 
-null: null.o
+$(OBJ_DIR)null: null.o
 	$(LD) $(LDFLAGS) -o $@ $<
 	chtyp -t 187 -a 32257 $@
 
-console: console.o inout.o box.root conpatch.o
+$(OBJ_DIR)console: console.o inout.o box.root conpatch.o
 	$(LD) $(LDFLAGS) -o $@ $<
 	chtyp -t 187 -a 32257 $@
 
