sim.asm: 	- did a 'setcom 60' to catch the weird formatting 	- created a dummy routine to go in the .root file. 	- this file didn't originally compile due to unresolved 	  references to ExtVect2.  Looking at the source it appears that 	  someone had started to modify it to allow a second interrupt 	  vector, but handn't finished the job.  I commented out the 	  initialization and checking of ExtVect2. simlib.asm: 	- did a 'setcom 60' to catch the weird formatting 	- created a dummy routine to go in the .root file. Makefile: 	- complete overhaul to fit into the GNO base builds

--- a/sim/Makefile
+++ b/sim/Makefile
@@ -1,17 +1,52 @@
-sim.root: sim.asm sim.mac simequates.equ
-  compile sim.asm keep=sim
+#
+# $Id: Makefile,v 1.2 1999/02/08 05:53:37 gdr-ftp Exp $
+#
 
-sim: sim.root
-  link sim keep=sim
-  chtyp -t \$B6 sim
+.INCLUDE: /src/gno/paths.mk
+.INCLUDE: /src/gno/lib/const.mk
 
-simlib.root: simlib.asm simlib.mac simequates.equ
-  compile simlib.asm keep=simlib
+SIM	= $(OBJ_DIR)SIM
+LIBSIM	= $(OBJ_DIR)libsim
 
-libsim: simlib.root
-  rm -f libsim
-  makelib libsim +simlib.root +simlib.a
+build:	$(OBJ_DIR) $(LIBSIM) $(SIM)
 
-test: test.c libsim
-  compile test.c keep=test
-  link test libsim keep=test
+$(OBJ_DIR):
+	$(INSTALL) -d $@
+
+# The 182 on the chtyp sets it to file type 0xB6; a PIF.
+$(SIM):		sim.o sim.r
+	$(CC) -o $@ $(OBJ_DIR)sim.o
+	$(CATREZ) -d $@ $(OBJ_DIR)sim.r
+	chtyp -t 182 $@
+
+$(LIBSIM):	simlib.o simlib.r
+	$(RM) -f $@
+	$(MAKELIB) $(MAKELIBFLAGS) -l $@ $(OBJ_DIR)simlib.o
+	$(CATREZ) -d $@ $(OBJ_DIR)simlib.r
+
+release:
+	$(INSTALL) -d $(RELEASE_DIR)/usr/lib $(RELEASE_DIR)/System/System.Setup
+	$(INSTALL) $(LIBSIM) $(RELEASE_DIR)/usr/lib
+	$(INSTALL) $(SIM) $(RELEASE_DIR)/System/System.Setup
+
+install:
+	$(INSTALL) -d /usr/lib
+	$(INSTALL) $(LIBSIM) /usr/lib
+
+# Implicit rule to handle Rez source on case sensitive Appleshare servers
+.IF $(APPLESHARE_CASE_SENSITIVE) != $(NULL)
+
+.IMPORT .IGNORE: TMPDIR
+.IF $(TMPDIR) == $(NULL)
+TMPDIR		= 14
+.END
+
+%.r : %.rez
+	$(INSTALL) $< $(TMPDIR)/$<
+	$(REZ) -o $@ -c $(REZFLAGS) $(TMPDIR)/$<
+	$(RM) -f $(TMPDIR)/$<
+.END
+
+# Additional dependencies
+simlib.o:	simlib.asm simlib.mac simequates.equ
+sim.o:		sim.asm sim.mac simequates.equ
